--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,16 @@
 }
 body {
   background-color: #000;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+svg {
+  width: 100%;
+  height: auto;
+  max-width: 1000px;
 }
 
 path {
